<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activities.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.example.joaogolias.pocunittests.components.customEditText.CustomEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="@string/email_hint"
                    app:emptinessIsValid="false"
                    app:emptyErrorText="@string/email_field_is_empty"
                    app:requiredCharacterSet="\@"
                    app:missingCharacterErrorText="@string/invalid_email_error_text">
            </com.example.joaogolias.pocunittests.components.customEditText.CustomEditText>

            <com.example.joaogolias.pocunittests.components.customEditText.CustomEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="@string/password_hint"
                    app:emptinessIsValid="false"
                    app:emptyErrorText="@string/password_field_is_empty"
                    app:minLength="6"
                    app:inputType="password"
                    app:invalidInputLengthText="@string/password_too_short_error_text">
            </com.example.joaogolias.pocunittests.components.customEditText.CustomEditText>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>